# discount

./: CMakeLists.txt
logic/include/: Discount.h  DiscountCondition.h  DiscountEffect.h  DiscountInstance.h  Manager.h  ManagerKey.h  NamedObject.h  Product.h  ProductInstance.h  ShoppingBasketItem.h  SimpleTypes.h  TaggedObject.h
logic/source/: Discount.cpp  DiscountInstance.cpp  NamedObject.cpp  Product.cpp  ProductInstance.cpp  ShoppingBasketItem.cpp  TaggedObject.cpp
logic_unit_tests/: CMakeLists.txt
logic_unit_tests/source/: NamedObject_tests.cpp  TaggedObject_tests.cpp
logic_unit_tests/source/FranL/: DiscountCondition_tests.cpp  DiscountEffect_tests.cpp  DiscountInstance_tests.cpp  Discount_tests.cpp  ManagerKey_tests.cpp  Manager_tests.cpp  ProductInstance_tests.cpp  Product_tests.cpp  ShoppingBasketItem_tests.cpp  TaggedObject_tests.cpp
